<resources>
    <string name="app_name">MovieApp</string>
    <string name="image_film">картинка фильма</string>
    <string name="star_rating">Звёздочка для рейтинга</string>
    <string name="poster_film">Постер фильма</string>
    <string name="min">мин.</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="top250">Top 250 IMDb</string>
    <string name="coming_soon">Coming soon</string>
    <string name="api_most_popular">MostPopularMovies</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="cast_group">Съёмочная группа</string>
    <string name="description">Описание</string>
    <string name="unroll">Развернуть</string>
    <string name="roll_up">Свернуть</string>
    <string name="actor">Actor</string>
    <string name="directors">Режиссёры</string>
    <string name="director">Режиссёр</string>
    <string name="main">Главная</string>
    <string name="favourites">Избранное</string>
    <string name="search">Поиск</string>
    <string name="history">История</string>
    <string name="settings">Настройки</string>
    <string name="like">Нравится</string>
    <string name="note">Заметка</string>
    <string name="note_about_movie">Заметка о фильме</string>
    <string name="enter_note">Введите заметку</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="rating">Оценка</string>
    <string name="my_rating">Мой рейтинг</string>
    <string name="clear_history">Очистить историю</string>
    <string name="empty">Пусто</string>
    <string name="save_history_of_watches">Сохранять историю просмотров</string>
    <string name="gray">Серый</string>
    <string name="red">Красный</string>
    <string name="green">Зелёный</string>
    <string name="my_rating_">Мой рейтинг:</string>
    <string name="career">Карьера</string>
    <string name="birth_date">Дата рождения</string>
    <string name="height">Рост</string>
    <string name="awards">Награды</string>
    <string name="movies_featuring">Фильмы с участием</string>
    <string name="summary">Резюме</string>
    <string name="data_could_not_be_retrieved_check_your_internet_connection">Не удалось получить данные. Проверьте соединение с интернетом</string>
    <string name="reload">Перезагрузить</string>
    <string name="enter_movie_name">Введите название..</string>
    <string name="nothing_was_found_for_your_query">По вашему запросу ничего не найдено</string>
    <string name="all">Всё</string>
    <string name="clean_watches_history">Очистить историю просмотров</string>
    <string name="the_browsing_history_has_been_cleared">История просмотров очищена</string>
    <string name="watches_history_is_empty">История просмотров пуста</string>
    <string name="save_search_history">Сохранять историю поиска</string>
    <string name="clean_search_history">Очистить историю поиска</string>
    <string name="search_history_has_been_cleared">История поиска очищена</string>
    <string name="casting_images">Фото со съёмок</string>
    <string name="trailer">Трейлер</string>
    <string name="watch_at_youtube">Смотреть в YouTube</string>
    <string name="select_the_categories_to_be_displayed">Выберите категории, которые будут отображаться</string>
    <string name="clean_favorites">Очистить избранное</string>
    <string name="favorites_is_cleared">Избранное очищено</string>
    <string name="similars_movies">Похожие фильмы</string>

    //fragment_splash_screen_main.xml
    <string name="loading_list_of_movies">Загружаю список фильмов..</string>
</resources>