<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main"
        android:icon="@drawable/ic_baseline_home_24"
        android:orderInCategory="1"
        android:title="@string/main" />

    <item
        android:id="@+id/favourites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:orderInCategory="2"
        android:title="@string/favourites" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="3"
        android:title="@string/search" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_baseline_history_24"
        android:orderInCategory="4"
        android:title="@string/history" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="5"
        android:title="@string/settings" />
</menu>