<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/toolbar"
            app:title="@string/settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_settings_fragment_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corners_radius"
            app:cardElevation="@dimen/card_elevation">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkbox_top250"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top250" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkbox_most_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/most_popular_movies" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkbox_coming_soon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coming_soon" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_settings_fragment_linear"
            android:text="@string/history"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corners_radius"
            app:cardElevation="@dimen/card_elevation">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_settings_fragment_linear">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_save_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_history_of_watches" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/action_clean_watched_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_title"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_settings_menu_item">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clean_watches_history" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_delete_sweep_24" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_save_search_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_search_history" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/action_clean_search_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_title"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_settings_menu_item">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clean_search_history" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_delete_sweep_24" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>