<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/card_elevation">

        <ProgressBar
            android:id="@+id/progress_bar_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_image"
            android:layout_width="@dimen/width_image_details"
            android:layout_height="@dimen/height_image_details"
            app:cardCornerRadius="@dimen/card_elevation"
            app:cardElevation="@dimen/padding_recycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/poster_film"
                android:scaleType="fitXY"
                tools:src="@drawable/movie" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            tools:text="Red dead redemption" />

        <LinearLayout
            android:id="@+id/linear_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <ImageView
                android:id="@+id/image_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star_rating"
                android:src="@drawable/ic_baseline_star_rate_24" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="8.4 (123540)" />

        </LinearLayout>

        <TextView
            android:id="@+id/details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_movie_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_rating"
            tools:text="2021, комедия, семейный\nРоссия, 1h 45min" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_details_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            android:maxLines="4"
            tools:text="ndfjsbnjbnsdjkbjkdsfjkljnfdsjnjsfdjkfsdkjknsdfjnjksfdjkjsdfnjknsdjfnfjkndfnjnjfdjknfdjsknjsdfnjknsdfjknjsdnfjknsdjfnjknjdskfnjksdfjnjndsjkfjfdsnjjnsdjfjfdsnjkfdnnkdsfnjbdsfjabjak lk dsfajbdablkjafjafjk k asdjlkf  adsfj das fad hjsdfaj daf k fbjdasbjdbsfjkdasbfjkdsfk hkd sfajk afdjbdasjfdsjfj ja dafjksd f jkadsf" />

        <TextView
            android:id="@+id/action_unroll_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_description"
            android:gravity="end"
            android:text="@string/unroll"/>

        <TextView
            android:id="@+id/tv_cast_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cast_group"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/action_unroll_cast_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_cast_group"
            android:text="@string/unroll"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:orientation="vertical"
            app:flow_maxElementsWrap="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>