<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/toolbar"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/summary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_recycler">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_portrait"
                android:layout_width="160dp"
                android:layout_height="220dp"
                app:cardCornerRadius="@dimen/corners_radius"
                app:cardElevation="@dimen/card_elevation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/portrait"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/avengers" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_start_linear_person_fragment"
                app:layout_constraintBottom_toBottomOf="@id/card_portrait"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_portrait"
                app:layout_constraintTop_toTopOf="@id/card_portrait"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textStyle="bold"
                    tools:text="Leonardo Dicaprio" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="@string/career"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_role"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="end"
                        android:textStyle="bold"
                        tools:text="Актёр, Режиссёр, продюссер" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="@string/birth_date"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_birth_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="end"
                        android:textStyle="bold"
                        tools:text="1956-07-03\n(47 y.o)" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="@string/height"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_height"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="end"
                        android:textStyle="bold"
                        tools:text="1.77m" />

                </GridLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_portrait">

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_summary_text"
                    tools:text="Mel Columcille Gerard Gibson was born January 3, 1956 in Peekskill, New York, USA, as the sixth of eleven children of Hutton Gibson, a railroad brakeman, and Anne Patricia (Reilly) Gibson (who died in December of 1990). His mother was Irish, from County Longford, while his American-born father is of mostly Irish descent. Mel and his family moved to..." />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/corners_radius"
                    android:background="@color/title_background_color"
                    android:padding="@dimen/padding_tv_title"
                    android:text="@string/awards"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Won 2 Oscars. Another 42 wins &amp; 43 nominations." />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/corners_radius"
                    android:background="@color/title_background_color"
                    android:padding="@dimen/padding_tv_title"
                    android:text="@string/movies_featuring"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_summary_text"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>